Updated text, fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="./static/index_style.css">
 	<link rel="stylesheet" type="text/css" href="./static/bootstrap.css">
 	<!--fonts-->
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Raleway:400,600,700|Inconsolata' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Ubuntu|Inconsolata" rel="stylesheet">
 	<!--jQuery/jQuery UI-->
 	<script type="text/javascript" src="./static/jquery.min.js"></script>
 	<script type="text/javascript" src="./static/jquery-ui.js"></script>
@@ -69,7 +69,7 @@
 <body>
 <nav>
 	<h1 id="name" role="First Name">Andrew Sorensen</h1>
-	<h3 id="title" role="Title">Front End Software Engineer</h3>
+	<h3 id="title" role="Title">Software Engineer</h3>
 </nav>
 <div class="container-fluid" role="presentation">
 	<div class="row">
@@ -102,19 +102,19 @@
 			</div>
 			<h3 class="content_label">Background...</h3>
 			<div class="content text_content">
-				<p class="inner_content">I am a very thorough Web Developer with a real passion for technology and improving the user experience. I have a BA in Music from Central Washington University and I am always using my artistic side to complement the logicality of coding.</p>
+				<p class="inner_content">I am a very thorough Web Developer with a real passion for using technology to make our lives easier and more efficient. I take a great deal of pride in my work and definitely think that the little things are what make all the difference. Proper code formatting, for example, is something that I have noticed that few engineers actually take the time to care about.</p>
 				<p class="inner_content">After a relatively short stint in sales for a couple of companies, I decided that the career I really wanted was in software development. I quit my job, moved back in with my mother, and basically hit the reset button on my life in order to attend Coding Dojo in Bellevue. Armed with the skills required to pursue one of my passions, I secured my current position with Expedia, Inc. as an Associate Software Engineer..</p>
 				<p class="inner_content">Check out some of my projects above!</p>
 			</div>
-			<h3 class="content_label">Why am I unique?</h3>
+			<h3 class="content_label">Why pick me?</h3>
 			<div class="content text_content">
-				<p>I always try to think of coding in the same way that I think of writing music:</p>
+				<p>Well you certainly don't have to! There are a few things that certainly make me a unique choice though:</p>
 				<ul>
-					<li>Certain notes don't go together - you must use the right syntax and the best languages/features/modules in concert with each other.</li>
-					<li>The whole thing must progress in a certain way - keep in mind the scoping of variables and classes, hoisting, etc.</li>
-					<li>It must also be playable - it must provide an intuitive user interface with a rewarding experience for the user.</li>
+					<li>One of the things I learned from my musical experience is that attention to details matters. A lot. Even if it means going back through to make sure your code is indented properly. That stuff matters and I won't put code out there that doesn't at least look nice.</li>
+					<li>Something else that I've noticed tends to get lost on some engineers is a general sense of pride in the work that they do. It's my opinion that you should be very proud of everything you've written. If it gets to a point where you're not proud anymore? Rewrite it.</li>
+					<li>Finally, there's problem solving ability. This is what separates the good from the average. The ability to isolate a problem and determine the difference between unrelated code and very much related code is a difficult one. It takes focus and a sharp logical mind. I am very proud of my ability to start from a symptom on a user interface and trace the bug or bad data through every step, even when it leaves my area of expertise.</li>
 				</ul>
-				<p>Music also taught me about dedication. Spending 4-6 hours per day alone in a practice room was necessary to master control of the piano, and it is no different with coding.</p>
+				<p>Another thing I learned from studying music is dedication. Spending 4-6 hours per day alone in a practice room was necessary to master control of the piano, and it is no different with coding.</p>
 				<p>Through my current experience with Expedia I have learned and become accustomed to what it takes to be a successful Software Engineer in an Agile environment. The number one thing that I strive for is to learn something new every day. Whether it's a small CSS trick or learning to use JavaScript Promises, every day brings more knowledge.</p>
 				<p>If you're interested, go ahead and email me so we can talk about about how I may fit into your team!</p>
 				<p>- Sorensenapaul@gmail.com</p>
@@ -203,7 +203,7 @@
 </div>
 <!--END MODALS-->
 <footer>
-	<h4>ConeDeathAPS - Updated 6/21/2017 at 9:30pm PDT</h4>
+	<h4>ConeDeathAPS - Updated 2/26/2018 at 8:00pm PST</h4>
 </footer>
 
 </body>
